# real-time-anomaly-detection-system

./: .gitignore  Makefile  pyproject.toml
core/: config.py
docs/: PROJECT_OVERVIEW.md  setup.md
infra/: docker-compose.yml
producers/: kafka_producer.py  transaction_producer.py
streaming/: spark_stream.py
