[project]
name = "anomaly-detection-system"
version = "0.1.0"
description = "Real-time anomaly detection system"
authors = [
    {name = "Guilherme V Daros"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyspark (==3.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
